--- a/style.css
+++ b/style.css
@@ -4,34 +4,90 @@ body {
    justify-content: center;
    align-items: center;
 }
+.links {
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: 100;
+   height: 30px;
+   background: rgb(163, 229, 132);
+   width: 350px;
+
+}
 .list-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
-   width: 500px;
+   width: 350px;
    background-color: rgba(110, 32, 32, 0.562);
    display: flex;
    justify-content: center;
    align-items: center;
 }
-.options {
+.buttons-wrapper {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: rgb(255, 252, 240);
+}
+.buttons-container {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+.about-item {
    position: absolute;
    top: 0;
    right: 0;
    height: 100vh;
-   width: 500px;
+   width: 300px;
    background-color: rgba(57, 156, 18, 0.562);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
 }
-.remove {
+label {
+   opacity: 0.5
+}
+
+.table-info {
+   position: absolute;
+   right: 0;
+   top: 0;
+   height: 100vh;
+   width: 300px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+.chooseModeButton {
+   width:100px;
+   height:100px;
+   background-position:cover;
+   background-size: cover;
+   margin: 5px;
+   background-color: rgb(104, 86, 86);
+}
+.buttonChecked {
+   opacity: 1;
+}
+.remove, .save {
    width: 70px;   
    height: 40px;
 }
 
+.hide {
+   display: none;
+}
+
+input:checked + label {
+   opacity: 1;
+}
 
 canvas {
    border: 1px dashed black;
